native/tests/snapshots/parse_tests__parse_python.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                16,
                "comment",
            ),
        ],
        [],
        [
            (
                0,
                3,
                "keyword",
            ),
            (
                4,
                8,
                "function",
            ),
            (
                13,
                21,
                "comment",
            ),
        ],
        [
            (
                4,
                10,
                "keyword",
            ),
            (
                11,
                12,
                "number",
            ),
        ],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "function_definition",
            name: "main",
            detail: "",
            start_byte: 18,
            end_byte: 52,
            children: [],
        },
    ],
}
