native/tests/snapshots/parse_tests__parse_rb.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                14,
                "comment",
            ),
        ],
        [
            (
                0,
                7,
                "function.method",
            ),
            (
                8,
                19,
                "string",
            ),
        ],
        [
            (
                0,
                6,
                "keyword",
            ),
            (
                7,
                8,
                "constant",
            ),
        ],
        [
            (
                2,
                7,
                "keyword",
            ),
            (
                8,
                9,
                "constant",
            ),
        ],
        [
            (
                4,
                7,
                "keyword",
            ),
            (
                8,
                9,
                "function.method",
            ),
            (
                9,
                10,
                "punctuation.bracket",
            ),
            (
                10,
                11,
                "function.method",
            ),
            (
                11,
                12,
                "punctuation.bracket",
            ),
        ],
        [
            (
                6,
                7,
                "function.method",
            ),
            (
                10,
                11,
                "number",
            ),
            (
                14,
                15,
                "number",
            ),
            (
                18,
                19,
                "number",
            ),
        ],
        [
            (
                4,
                7,
                "keyword",
            ),
        ],
        [
            (
                2,
                5,
                "keyword",
            ),
        ],
        [
            (
                0,
                3,
                "keyword",
            ),
        ],
        [],
    ],
    outline: [],
}
