native/tests/snapshots/parse_tests__parse_rs.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                15,
                "comment",
            ),
        ],
        [
            (
                0,
                2,
                "keyword",
            ),
            (
                3,
                7,
                "function",
            ),
            (
                7,
                8,
                "punctuation.bracket",
            ),
            (
                8,
                9,
                "punctuation.bracket",
            ),
            (
                10,
                11,
                "punctuation.bracket",
            ),
            (
                12,
                23,
                "comment",
            ),
            (
                24,
                27,
                "keyword",
            ),
            (
                32,
                33,
                "constant.builtin",
            ),
            (
                33,
                34,
                "punctuation.delimiter",
            ),
            (
                35,
                36,
                "punctuation.bracket",
            ),
        ],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "function_item",
            name: "main",
            detail: "",
            start_byte: 16,
            end_byte: 52,
            children: [],
        },
    ],
}
