native/tests/snapshots/parse_tests__parse_sh.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                11,
                "comment",
            ),
        ],
        [
            (
                0,
                15,
                "comment",
            ),
        ],
        [
            (
                0,
                4,
                "function",
            ),
        ],
        [],
    ],
    outline: [],
}
