native/tests/snapshots/parse_tests__parse_swift.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                16,
                "comment",
            ),
        ],
        [
            (
                0,
                4,
                "keyword.function",
            ),
            (
                5,
                9,
                "function.method",
            ),
            (
                9,
                10,
                "punctuation.bracket",
            ),
            (
                10,
                11,
                "punctuation.bracket",
            ),
            (
                12,
                13,
                "punctuation.bracket",
            ),
            (
                14,
                25,
                "comment",
            ),
            (
                26,
                31,
                "function.call",
            ),
            (
                31,
                32,
                "punctuation.bracket",
            ),
            (
                32,
                33,
                "string",
            ),
            (
                33,
                35,
                "string",
            ),
            (
                35,
                36,
                "string",
            ),
            (
                36,
                37,
                "punctuation.bracket",
            ),
            (
                38,
                39,
                "punctuation.bracket",
            ),
        ],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "function_declaration",
            name: "main",
            detail: "",
            start_byte: 17,
            end_byte: 56,
            children: [],
        },
    ],
}
