native/tests/snapshots/parse_tests__parse_toml.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                14,
                "comment",
            ),
        ],
        [
            (
                0,
                1,
                "punctuation.bracket",
            ),
            (
                1,
                8,
                "type",
            ),
            (
                8,
                9,
                "punctuation.bracket",
            ),
        ],
        [
            (
                0,
                4,
                "type",
            ),
            (
                4,
                5,
                "property",
            ),
            (
                5,
                6,
                "operator",
            ),
            (
                6,
                7,
                "property",
            ),
            (
                7,
                13,
                "string",
            ),
        ],
        [
            (
                0,
                7,
                "type",
            ),
            (
                7,
                8,
                "property",
            ),
            (
                8,
                9,
                "operator",
            ),
            (
                9,
                10,
                "property",
            ),
            (
                10,
                17,
                "string",
            ),
        ],
        [],
    ],
    outline: [],
}
