native/tests/snapshots/parse_tests__parse_ts.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                13,
                "comment",
            ),
        ],
        [
            (
                0,
                8,
                "keyword",
            ),
            (
                9,
                12,
                "function",
            ),
            (
                12,
                13,
                "punctuation.bracket",
            ),
            (
                13,
                14,
                "variable.parameter",
            ),
            (
                16,
                22,
                "type.builtin",
            ),
            (
                22,
                23,
                "punctuation.bracket",
            ),
            (
                25,
                31,
                "type.builtin",
            ),
            (
                32,
                33,
                "punctuation.bracket",
            ),
            (
                34,
                40,
                "keyword",
            ),
            (
                41,
                42,
                "variable",
            ),
            (
                42,
                43,
                "punctuation.delimiter",
            ),
            (
                44,
                45,
                "punctuation.bracket",
            ),
        ],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "function_declaration",
            name: "add",
            detail: "",
            start_byte: 14,
            end_byte: 59,
            children: [],
        },
    ],
}
