native/tests/snapshots/parse_tests__parse_tsx.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                14,
                "comment",
            ),
        ],
        [
            (
                0,
                5,
                "keyword",
            ),
            (
                6,
                8,
                "variable",
            ),
            (
                9,
                10,
                "operator",
            ),
            (
                11,
                12,
                "punctuation.bracket",
            ),
            (
                12,
                15,
                "tag",
            ),
            (
                15,
                16,
                "punctuation.bracket",
            ),
            (
                18,
                20,
                "punctuation.bracket",
            ),
            (
                20,
                23,
                "tag",
            ),
            (
                23,
                24,
                "punctuation.bracket",
            ),
            (
                24,
                25,
                "punctuation.delimiter",
            ),
        ],
        [],
    ],
    outline: [],
}
