native/tests/snapshots/parse_tests__parse_xml.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                2,
                "punctuation.delimiter",
            ),
            (
                2,
                5,
                "keyword",
            ),
            (
                6,
                13,
                "property",
            ),
            (
                13,
                14,
                "operator",
            ),
            (
                14,
                15,
                "punctuation.delimiter",
            ),
            (
                15,
                18,
                "number",
            ),
            (
                18,
                19,
                "punctuation.delimiter",
            ),
            (
                19,
                21,
                "punctuation.delimiter",
            ),
        ],
        [
            (
                0,
                20,
                "comment",
            ),
        ],
        [
            (
                0,
                1,
                "punctuation.delimiter",
            ),
            (
                1,
                5,
                "tag",
            ),
            (
                6,
                8,
                "property",
            ),
            (
                8,
                9,
                "operator",
            ),
            (
                9,
                10,
                "punctuation.delimiter",
            ),
            (
                10,
                11,
                "string",
            ),
            (
                11,
                12,
                "punctuation.delimiter",
            ),
            (
                12,
                13,
                "punctuation.delimiter",
            ),
            (
                13,
                14,
                "punctuation.delimiter",
            ),
            (
                14,
                19,
                "tag",
            ),
            (
                19,
                20,
                "punctuation.delimiter",
            ),
            (
                20,
                22,
                "markup",
            ),
            (
                22,
                24,
                "punctuation.delimiter",
            ),
            (
                24,
                29,
                "tag",
            ),
            (
                29,
                30,
                "punctuation.delimiter",
            ),
            (
                30,
                31,
                "punctuation.delimiter",
            ),
            (
                31,
                36,
                "tag",
            ),
            (
                36,
                38,
                "punctuation.delimiter",
            ),
            (
                38,
                40,
                "punctuation.delimiter",
            ),
            (
                40,
                44,
                "tag",
            ),
            (
                44,
                45,
                "punctuation.delimiter",
            ),
        ],
        [],
    ],
    outline: [],
}
