native/tests/snapshots/parse_tests__parse_yaml.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                14,
                "comment",
            ),
        ],
        [
            (
                0,
                3,
                "property",
            ),
            (
                3,
                4,
                "punctuation.delimiter",
            ),
            (
                5,
                10,
                "string",
            ),
        ],
        [
            (
                0,
                4,
                "property",
            ),
            (
                4,
                5,
                "punctuation.delimiter",
            ),
        ],
        [
            (
                2,
                3,
                "punctuation.delimiter",
            ),
            (
                4,
                5,
                "string",
            ),
        ],
        [
            (
                2,
                3,
                "punctuation.delimiter",
            ),
            (
                4,
                5,
                "string",
            ),
        ],
        [],
    ],
    outline: [],
}
