native/tests/snapshots/parse_tests__parse_yml.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                13,
                "comment",
            ),
        ],
        [
            (
                0,
                3,
                "property",
            ),
            (
                3,
                4,
                "punctuation.delimiter",
            ),
            (
                5,
                10,
                "string",
            ),
        ],
        [],
    ],
    outline: [],
}
