native/tests/snapshots/parse_tests__parse_zsh.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(& result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                13,
                "comment",
            ),
        ],
        [
            (
                0,
                4,
                "function",
            ),
        ],
        [],
    ],
    outline: [],
}
